# mlops_project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
src/application/: dtos.py
src/application/prediction/: service.py
src/application/training/: service.py
src/domain/ml/: entities.py  exceptions.py  ports.py
src/infrastructure/data/: pandas_loader.py
src/infrastructure/ml_registry/: filesystem.py
src/infrastructure/monitoring/: evidently_monitor.py
src/infrastructure/tracking/: mlflow_tracker.py
src/interface/: __main__.py  runners.py
src/interface/api/: main.py
src/interface/api/routes/: monitoring.py  prediction.py  training.py
src/interface/streamlit/: app.py
src/interface/streamlit/pages/: monitoring.py  prediction.py  training.py
tests/unit/: test_structure.py
