[project]
name = "mlops-project"
version = "0.1.0"
description = "MLOps Project with FastAPI, Streamlit, MLFlow, and Evidently"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "streamlit>=1.31.0",
    "pydantic>=2.6.0",
    "pandera>=0.18.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "mlflow>=3.7.0",
    "evidently>=0.4.16",
    "python-multipart>=0.0.9",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.2.1",
    "mypy>=1.8.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
